--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       margin: 10px 0 6px; 
       color: var(--text-light); 
     }
+    .hero-subline { display: block; font-size: 0.9em; font-weight: 600; margin-top: 6px; }
     .sub { color: var(--text-dim); font-size: 1.05rem; margin-bottom: 18px; }
 
     .cta-row { display: flex; gap: 12px; flex-wrap: wrap; }
@@ -313,9 +314,9 @@
         <div>
           <div class="eyebrow">Pré-lancement</div>
           <h1 id="hero-title">
-            Reprogrammation à distance<br/>
-            Véhicules Powersport – ATV/SSV/UTV<br/>
-            Sans démontage – OBD priorisé
+            Reprogrammation à distance
+            <span class="hero-subline">Véhicules Powersport – ATV/SSV/UTV</span>
+            <span class="hero-subline">Sans démontage – OBD priorisé</span>
           </h1>
           <p class="sub">
             Gain de performance mesuré. Process sécurisé. Assistance à distance.<br/>
