--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           </div>
         </div>
         <div class="hero-figure">
-          <img src="assets/laptop_opt.png" alt="Interface de programmation" loading="lazy" />
+          <img src="assets/Laptop_OPT.png" alt="Interface de programmation" loading="lazy" />
           <img src="assets/ECU_1_H.png" alt="Illustration de procédure à distance" loading="lazy" />
         </div>
       </div>
