--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
       min-height: 70px;
     }
     .head a[aria-label="Accueil"] img {
-      height: 42px;
-      width: auto;
-      object-fit: contain;
-      border-radius: 0;
-    }
+  height: 100px;
+  width: auto;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 0;
+}
     nav a { 
       margin-left: 20px; 
       font-weight: 600; 
@@ -297,7 +298,7 @@
   <header>
     <div class="head wrap">
       <a href="#" aria-label="Accueil">
-        <img src="assets/logo.png" alt="REVX Systems" height="42" />
+        <img src="assets/Logo01_2025_crop.png" alt="REVX Systems" height="100" />
       </a>
       <nav aria-label="Navigation principale">
         <a href="#services">Services</a>
