--- a/solution.html
+++ b/solution.html
@@ -87,7 +87,7 @@
                         <!-- Centre: Logo/Symbole RevX -->
                         <circle cx="200" cy="175" r="35" class="svg-stroke" stroke-width="2"/>
                         <path d="M185 175 L195 185 L215 165" class="svg-stroke-accent" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        <text x="200" y="210" text-anchor="middle" class="svg-text-small" font-weight="600">RevX</text>
+                        <text x="200" y="225" text-anchor="middle" class="svg-text-small" font-weight="600">RevX</text>
                         
                         <!-- Nœud 1: Fiabilité (Haut) -->
                         <g transform="translate(200, 40)">
@@ -97,7 +97,7 @@
                             <path d="M0 -10 L-8 -6 L-8 2 C-8 8 -4 12 0 14 C4 12 8 8 8 2 L8 -6 Z" class="svg-stroke-accent" stroke-width="1.8" fill="none"/>
                             <path d="M-3 2 L-1 4 L4 -2" class="svg-stroke-accent" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </g>
-                        <text x="200" y="18" text-anchor="middle" class="svg-text-small" font-weight="500">Fiabilité</text>
+                        <text x="200" y="90" text-anchor="middle" class="svg-text-small" font-weight="500">Fiabilité</text>
                         
                         <!-- Nœud 2: Contrôle (Droite) -->
                         <g transform="translate(320, 175)">
@@ -375,6 +375,26 @@
                     <text x="366" y="145" text-anchor="middle" class="svg-text-small" opacity="0.7">Flash</text>
                     <text x="500" y="145" text-anchor="middle" class="svg-text-small" opacity="0.7">Suivi</text>
                 </svg>
+            </div>
+        </div>
+    </section>
+
+    <!-- Expertise Section -->
+    <section class="section expertise">
+        <div class="container">
+            <div class="intro-block">
+                <div class="intro-content">
+                    <h2 class="section-title">Une expertise construite sur le terrain</h2>
+                    <p class="intro-text intro-text--lead">
+                        La solution RevX s'appuie sur plus de dix années d'expérience dans l'analyse, 
+                        la compréhension et la modification de calculateurs moteur, sur des architectures 
+                        variées et des environnements multiples.
+                    </p>
+                    <p class="intro-text">
+                        Cette expérience permet d'aborder chaque intervention avec méthode, recul et cohérence, 
+                        en privilégiant la fiabilité et la maîtrise des risques.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
