--- a/prestations.html
+++ b/prestations.html
@@ -157,7 +157,7 @@
                 <div class="service-visual">
                     <div style="position: relative; width: 100%; height: 550px; display: flex; align-items: center; justify-content: center; overflow: hidden;">
                         <!-- Image Prog avec effets -->
-                        <img src="assets/Prog.png" alt="Programming Icon" style="
+                        <img src="assets/Prog.PNG" alt="Programming Icon" style="
                             width: auto;
                             height: 92%;
                             max-width: 103.5%;
