--- a/prestations.html
+++ b/prestations.html
@@ -205,8 +205,9 @@
                         toute intervention sur le calculateur.
                     </p>
                     <p class="intro-text">
-                        Chaque configuration est étudiée afin de déterminer la méthode la plus adaptée au 
-                        véhicule et à son environnement.
+                        Cette approche permet d'éviter le démontage du calculateur, de réduire l'immobilisation
+                        des véhicules et de limiter les contraintes logistiques, tout en garantissant une
+                        intervention maîtrisée et adaptée à chaque configuration.
                     </p>
                 </div>
             </div>
