--- a/solution.html
+++ b/solution.html
@@ -326,6 +326,23 @@
         </div>
     </section>
 
+    <!-- Field-Oriented Approach Section -->
+    <section class="section field-approach">
+        <div class="container">
+            <div class="intro-block intro-block--right">
+                <div class="intro-content">
+                    <h2 class="section-title">Une approche pensée pour le terrain</h2>
+                    <p class="intro-text intro-text--lead">
+                        Les méthodes traditionnelles impliquent souvent le démontage du calculateur, l'immobilisation prolongée du véhicule, ainsi qu'une logistique contraignante liée au transport des composants.
+                    </p>
+                    <p class="intro-text">
+                        La solution RevX a été conçue pour limiter ces contraintes en privilégiant des interventions à distance, directement sur site lorsque cela est possible, sans démontage inutile et sans dépendance à une chaîne logistique externe.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Visual Summary -->
     <section class="section summary-visual">
         <div class="container">
@@ -384,7 +401,7 @@
         <div class="container">
             <div class="intro-block">
                 <div class="intro-content">
-                    <h2 class="section-title">Une expertise construite sur le terrain</h2>
+                    <h2 class="section-title">Une expertise construite dans la durée</h2>
                     <p class="intro-text intro-text--lead">
                         La solution RevX s'appuie sur plus de dix années d'expérience dans l'analyse, 
                         la compréhension et la modification de calculateurs moteur, sur des architectures 
