--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                     <input type="hidden" name="_subject" value="Nouvelle demande de projet - REVX Systems">
                     <input type="hidden" name="_captcha" value="true">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="https://revx-systems.fr/contact.html?sent=true">
+                    <input type="hidden" name="_next" value="https://revx-systems.fr/merci.html">
                     <input type="text" name="_honey" style="display:none">
 
                     <div class="form-row">
@@ -109,7 +109,7 @@
 
                     <div class="form-group">
                         <label for="brand_model" class="form-label">Marque / Modèle <span class="required">*</span></label>
-                        <input type="text" id="brand_model" name="marque_modele" required class="form-input" placeholder="Ex: Fiat Ducato 2.3 MJT">
+                        <input type="text" id="brand_model" name="marque_modele" required class="form-input" placeholder="Ex: CF Moto UForce 1000, Polaris RZR XP, etc.">
                     </div>
 
                     <div class="form-group">
