--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                 <form action="https://formsubmit.co/contact@revx-systems.fr" method="POST" class="contact-form" id="contactForm">
                     <!-- FormSubmit Configuration -->
                     <input type="hidden" name="_subject" value="Nouvelle demande de projet - REVX Systems">
-                    <input type="hidden" name="_captcha" value="true">
+                    <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="table">
                     <input type="hidden" name="_next" value="https://revx-systems.fr/merci.html">
                     <input type="text" name="_honey" style="display:none">
