--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
 
-                <form action="https://formsubmit.co/contact@revx-systems.fr" method="POST" class="contact-form" id="contactForm">
+                <form action="https://formsubmit.co/ajax/contact@revx-systems.fr" method="POST" class="contact-form" id="contactForm">
                     <!-- FormSubmit Configuration -->
                     <input type="hidden" name="_subject" value="Nouvelle demande de projet - REVX Systems">
                     <input type="hidden" name="_captcha" value="false">
@@ -245,15 +245,45 @@
 
     <script src="js/main.js"></script>
     <script>
-        // Afficher le message de confirmation si ?sent=true dans l'URL
         document.addEventListener('DOMContentLoaded', function() {
-            const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get('sent') === 'true') {
-                document.getElementById('contactForm').style.display = 'none';
-                document.getElementById('successMessage').style.display = 'block';
-                // Nettoyer l'URL
-                window.history.replaceState({}, document.title, window.location.pathname);
-            }
+            const form = document.getElementById('contactForm');
+            const submitButton = form?.querySelector('.btn-submit');
+
+            if (!form) return;
+
+            form.addEventListener('submit', async function(event) {
+                event.preventDefault();
+
+                if (submitButton) {
+                    submitButton.disabled = true;
+                    submitButton.classList.add('is-loading');
+                }
+
+                try {
+                    const formData = new FormData(form);
+                    const response = await fetch(form.action, {
+                        method: 'POST',
+                        body: formData,
+                        headers: {
+                            'Accept': 'application/json'
+                        }
+                    });
+
+                    if (response.ok) {
+                        window.location.href = 'merci.html';
+                        return;
+                    }
+
+                    alert("Une erreur est survenue lors de l'envoi. Merci de réessayer.");
+                } catch (error) {
+                    alert("Une erreur est survenue lors de l'envoi. Merci de réessayer.");
+                } finally {
+                    if (submitButton) {
+                        submitButton.disabled = false;
+                        submitButton.classList.remove('is-loading');
+                    }
+                }
+            });
         });
     </script>
 </body>
